// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TrackInformation > matches the snapshot 1`] = `
"<ul class="trackDetails">
  <li class="detail">
    <p class="strong title">Title</p>
    <p class="content">queue-track-0</p>
  </li>
  <li class="detail">
    <p class="strong title">Album</p>
    <div class="content"><a class="link">album</a></div>
  </li>
  <li class="detail">
    <p class="strong title">Artists</p>
    <div class="content">
      <ul class="commaList">
        <li data-test-id="artist-list-item"><a>name</a></li>
        <li data-test-id="artist-list-item"><a>name1</a></li>
      </ul>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Track</p>
    <p class="content">-</p>
  </li>
  <li class="detail">
    <p class="strong title">Duration</p><time class="content">00:19</time>
  </li>
  <li class="detail">
    <p class="strong title">Year</p>
    <p class="content">2024</p>
  </li>
  <li class="detail">
    <p class="strong title">Disc number</p>
    <p class="content">1</p>
  </li>
  <li class="detail">
    <p class="strong title">Genre</p>
    <div class="content">
      <ul class="commaList">
        <li data-test-id="genre-list-item"><a>genre</a></li>
        <li data-test-id="genre-list-item"><a>genre1</a></li>
      </ul>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Size</p>
    <p class="content">0.02 KB</p>
  </li>
  <ul class="trackInformation">
    <li class="detail">
      <p class="strong title">Content type</p>
      <p class="content">contentType</p>
    </li>
    <li class="detail">
      <p class="strong title">Suffix</p>
      <p class="content">suffix</p>
    </li>
    <li class="detail">
      <p class="strong title">Bitrate</p>
      <p class="content">15</p>
    </li>
    <li class="detail">
      <p class="strong title">Path</p>
      <p class="content">path</p>
    </li>
  </ul>
</ul>"
`;

exports[`TrackInformation > when a track key is undefined > matches the snapshot 1`] = `
"<ul class="trackDetails">
  <li class="detail">
    <p class="strong title">Title</p>
    <p class="content">-</p>
  </li>
  <li class="detail">
    <p class="strong title">Album</p>
    <div class="content"><a class="link">album</a></div>
  </li>
  <li class="detail">
    <p class="strong title">Artists</p>
    <div class="content">
      <ul class="commaList">
        <li data-test-id="artist-list-item"><a>name</a></li>
        <li data-test-id="artist-list-item"><a>name1</a></li>
      </ul>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Track</p>
    <p class="content">-</p>
  </li>
  <li class="detail">
    <p class="strong title">Duration</p><time class="content">00:19</time>
  </li>
  <li class="detail">
    <p class="strong title">Year</p>
    <p class="content">2024</p>
  </li>
  <li class="detail">
    <p class="strong title">Disc number</p>
    <p class="content">1</p>
  </li>
  <li class="detail">
    <p class="strong title">Genre</p>
    <div class="content">
      <ul class="commaList">
        <li data-test-id="genre-list-item"><a>genre</a></li>
        <li data-test-id="genre-list-item"><a>genre1</a></li>
      </ul>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Size</p>
    <p class="content">0.02 KB</p>
  </li>
  <ul class="trackInformation">
    <li class="detail">
      <p class="strong title">Content type</p>
      <p class="content">contentType</p>
    </li>
    <li class="detail">
      <p class="strong title">Suffix</p>
      <p class="content">suffix</p>
    </li>
    <li class="detail">
      <p class="strong title">Bitrate</p>
      <p class="content">15</p>
    </li>
    <li class="detail">
      <p class="strong title">Path</p>
      <p class="content">path</p>
    </li>
  </ul>
</ul>"
`;

exports[`TrackInformation > when artists is an empty array > matches the snapshot 1`] = `
"<ul class="trackDetails">
  <li class="detail">
    <p class="strong title">Title</p>
    <p class="content">queue-track-0</p>
  </li>
  <li class="detail">
    <p class="strong title">Album</p>
    <div class="content"><a class="link">album</a></div>
  </li>
  <li class="detail">
    <p class="strong title">Artists</p>
    <div class="content">
      <p>-</p>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Track</p>
    <p class="content">-</p>
  </li>
  <li class="detail">
    <p class="strong title">Duration</p><time class="content">00:19</time>
  </li>
  <li class="detail">
    <p class="strong title">Year</p>
    <p class="content">2024</p>
  </li>
  <li class="detail">
    <p class="strong title">Disc number</p>
    <p class="content">1</p>
  </li>
  <li class="detail">
    <p class="strong title">Genre</p>
    <div class="content">
      <ul class="commaList">
        <li data-test-id="genre-list-item"><a>genre</a></li>
        <li data-test-id="genre-list-item"><a>genre1</a></li>
      </ul>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Size</p>
    <p class="content">0.02 KB</p>
  </li>
  <ul class="trackInformation">
    <li class="detail">
      <p class="strong title">Content type</p>
      <p class="content">contentType</p>
    </li>
    <li class="detail">
      <p class="strong title">Suffix</p>
      <p class="content">suffix</p>
    </li>
    <li class="detail">
      <p class="strong title">Bitrate</p>
      <p class="content">15</p>
    </li>
    <li class="detail">
      <p class="strong title">Path</p>
      <p class="content">path</p>
    </li>
  </ul>
</ul>"
`;

exports[`TrackInformation > when genres is an empty array > matches the snapshot 1`] = `
"<ul class="trackDetails">
  <li class="detail">
    <p class="strong title">Title</p>
    <p class="content">queue-track-0</p>
  </li>
  <li class="detail">
    <p class="strong title">Album</p>
    <div class="content"><a class="link">album</a></div>
  </li>
  <li class="detail">
    <p class="strong title">Artists</p>
    <div class="content">
      <ul class="commaList">
        <li data-test-id="artist-list-item"><a>name</a></li>
        <li data-test-id="artist-list-item"><a>name1</a></li>
      </ul>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Track</p>
    <p class="content">-</p>
  </li>
  <li class="detail">
    <p class="strong title">Duration</p><time class="content">00:19</time>
  </li>
  <li class="detail">
    <p class="strong title">Year</p>
    <p class="content">2024</p>
  </li>
  <li class="detail">
    <p class="strong title">Disc number</p>
    <p class="content">1</p>
  </li>
  <li class="detail">
    <p class="strong title">Genre</p>
    <div class="content">
      <p>-</p>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Size</p>
    <p class="content">0.02 KB</p>
  </li>
  <ul class="trackInformation">
    <li class="detail">
      <p class="strong title">Content type</p>
      <p class="content">contentType</p>
    </li>
    <li class="detail">
      <p class="strong title">Suffix</p>
      <p class="content">suffix</p>
    </li>
    <li class="detail">
      <p class="strong title">Bitrate</p>
      <p class="content">15</p>
    </li>
    <li class="detail">
      <p class="strong title">Path</p>
      <p class="content">path</p>
    </li>
  </ul>
</ul>"
`;

exports[`TrackInformation > when track information is not defined > matches the snapshot 1`] = `
"<ul class="trackDetails">
  <li class="detail">
    <p class="strong title">Title</p>
    <p class="content">queue-track-0</p>
  </li>
  <li class="detail">
    <p class="strong title">Album</p>
    <div class="content"><a class="link">album</a></div>
  </li>
  <li class="detail">
    <p class="strong title">Artists</p>
    <div class="content">
      <ul class="commaList">
        <li data-test-id="artist-list-item"><a>name</a></li>
        <li data-test-id="artist-list-item"><a>name1</a></li>
      </ul>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Track</p>
    <p class="content">-</p>
  </li>
  <li class="detail">
    <p class="strong title">Duration</p><time class="content">00:19</time>
  </li>
  <li class="detail">
    <p class="strong title">Year</p>
    <p class="content">2024</p>
  </li>
  <li class="detail">
    <p class="strong title">Disc number</p>
    <p class="content">1</p>
  </li>
  <li class="detail">
    <p class="strong title">Genre</p>
    <div class="content">
      <ul class="commaList">
        <li data-test-id="genre-list-item"><a>genre</a></li>
        <li data-test-id="genre-list-item"><a>genre1</a></li>
      </ul>
    </div>
  </li>
  <li class="detail">
    <p class="strong title">Size</p>
    <p class="content">0.02 KB</p>
  </li>
  <!--v-if-->
</ul>"
`;
